<resources>
    <string name="app_name">Basic_TBB</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hero_name">Hero Name</string>
    <string name="magic">Magic</string>
    <string name="skill">Skill</string>
    <string name="enter_name_of_your_skill">enter name of your skill</string>
    <string name="hero_image">hero_image</string>
    <string name="begin_game">Begin Game</string>
    <string name="magic_type">Magic Type:</string>
    <string name="draw_image">Draw Image</string>
    <string name="load_image_from_gallery">Load Image from gallery</string>
    <string name="skill_type">Skill Type</string>
    <string name="magic_name">Magic Name:</string>
    <string name="skill_name">Skill Name:</string>

    <string-array name="magicTypes">
        <item>Support Magic</item>
        <item>Offense Magic</item>
        <item>Defense Magic</item>
    </string-array>

    <string-array name="skillTypes">
        <item>Heavy Attack</item>
        <item>Rush Attack</item>
        <item>Accurate Attack</item>
    </string-array>
</resources>